refactor: Some major refactoring to support java 16 loom and Kotlin 1.4